openmm-sys/src/lib.rs

extern "C" {
    pub fn OpenMM_NonbondedForce_getCutoffDistance(target: *const OpenMM_NonbondedForce) -> f64;
}
extern "C" {
    pub fn OpenMM_NonbondedForce_setCutoffDistance(
        target: *mut OpenMM_NonbondedForce,
        distance: f64,
    );
}
extern "C" {
    pub fn OpenMM_NonbondedForce_getUseSwitchingFunction(
        target: *const OpenMM_NonbondedForce,
    ) -> OpenMM_Boolean;
}
extern "C" {
    pub fn OpenMM_NonbondedForce_setUseSwitchingFunction(
        target: *mut OpenMM_NonbondedForce,
        use_: OpenMM_Boolean,
    );
}
extern "C" {
    pub fn OpenMM_NonbondedForce_getSwitchingDistance(target: *const OpenMM_NonbondedForce) -> f64;
}
extern "C" {
    pub fn OpenMM_NonbondedForce_setSwitchingDistance(
        target: *mut OpenMM_NonbondedForce,
        distance: f64,
    );
}
extern "C" {
    pub fn OpenMM_NonbondedForce_getReactionFieldDielectric(
        target: *const OpenMM_NonbondedForce,
    ) -> f64;
}
extern "C" {
    pub fn OpenMM_NonbondedForce_setReactionFieldDielectric(
        target: *mut OpenMM_NonbondedForce,
        dielectric: f64,
    );
}
extern "C" {
    pub fn OpenMM_NonbondedForce_getEwaldErrorTolerance(
        target: *const OpenMM_NonbondedForce,
    ) -> f64;
}
extern "C" {
    pub fn OpenMM_NonbondedForce_setEwaldErrorTolerance(
        target: *mut OpenMM_NonbondedForce,
        tol: f64,
    );
}
extern "C" {
    pub fn OpenMM_NonbondedForce_getPMEParameters(
        target: *const OpenMM_NonbondedForce,
        alpha: *mut f64,
        nx: *mut ::std::os::raw::c_int,
        ny: *mut ::std::os::raw::c_int,
        nz: *mut ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn OpenMM_NonbondedForce_getLJPMEParameters(
        target: *const OpenMM_NonbondedForce,
        alpha: *mut f64,
        nx: *mut ::std::os::raw::c_int,
        ny: *mut ::std::os::raw::c_int,
        nz: *mut ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn OpenMM_NonbondedForce_setPMEParameters(
        target: *mut OpenMM_NonbondedForce,
        alpha: f64,
        nx: ::std::os::raw::c_int,
        ny: ::std::os::raw::c_int,
        nz: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn OpenMM_NonbondedForce_setLJPMEParameters(
        target: *mut OpenMM_NonbondedForce,
        alpha: f64,
        nx: ::std::os::raw::c_int,
        ny: ::std::os::raw::c_int,
        nz: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn OpenMM_NonbondedForce_getPMEParametersInContext(
        target: *const OpenMM_NonbondedForce,
        context: *const OpenMM_Context,
        alpha: *mut f64,
        nx: *mut ::std::os::raw::c_int,
        ny: *mut ::std::os::raw::c_int,
        nz: *mut ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn OpenMM_NonbondedForce_getLJPMEParametersInContext(
        target: *const OpenMM_NonbondedForce,
        context: *const OpenMM_Context,
        alpha: *mut f64,
        nx: *mut ::std::os::raw::c_int,
        ny: *mut ::std::os::raw::c_int,
        nz: *mut ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn OpenMM_NonbondedForce_addParticle(
        target: *mut OpenMM_NonbondedForce,
        charge: f64,
        sigma: f64,
        epsilon: f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_NonbondedForce_getParticleParameters(
        target: *const OpenMM_NonbondedForce,
        index: ::std::os::raw::c_int,
        charge: *mut f64,
        sigma: *mut f64,
        epsilon: *mut f64,
    );
}
extern "C" {
    pub fn OpenMM_NonbondedForce_setParticleParameters(
        target: *mut OpenMM_NonbondedForce,
        index: ::std::os::raw::c_int,
        charge: f64,
        sigma: f64,
        epsilon: f64,
    );
}
extern "C" {
    pub fn OpenMM_NonbondedForce_addException(
        target: *mut OpenMM_NonbondedForce,
        particle1: ::std::os::raw::c_int,
        particle2: ::std::os::raw::c_int,
        chargeProd: f64,
        sigma: f64,
        epsilon: f64,
        replace: OpenMM_Boolean,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_NonbondedForce_getExceptionParameters(
        target: *const OpenMM_NonbondedForce,
        index: ::std::os::raw::c_int,
        particle1: *mut ::std::os::raw::c_int,
        particle2: *mut ::std::os::raw::c_int,
        chargeProd: *mut f64,
        sigma: *mut f64,
        epsilon: *mut f64,
    );
}
extern "C" {
    pub fn OpenMM_NonbondedForce_setExceptionParameters(
        target: *mut OpenMM_NonbondedForce,
        index: ::std::os::raw::c_int,
        particle1: ::std::os::raw::c_int,
        particle2: ::std::os::raw::c_int,
        chargeProd: f64,
        sigma: f64,
        epsilon: f64,
    );
}
extern "C" {
    pub fn OpenMM_NonbondedForce_createExceptionsFromBonds(
        target: *mut OpenMM_NonbondedForce,
        bonds: *const OpenMM_BondArray,
        coulomb14Scale: f64,
        lj14Scale: f64,
    );
}
extern "C" {
    pub fn OpenMM_NonbondedForce_addGlobalParameter(
        target: *mut OpenMM_NonbondedForce,
        name: *const ::std::os::raw::c_char,
        defaultValue: f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_NonbondedForce_getGlobalParameterName(
        target: *const OpenMM_NonbondedForce,
        index: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_NonbondedForce_setGlobalParameterName(
        target: *mut OpenMM_NonbondedForce,
        index: ::std::os::raw::c_int,
        name: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn OpenMM_NonbondedForce_getGlobalParameterDefaultValue(
        target: *const OpenMM_NonbondedForce,
        index: ::std::os::raw::c_int,
    ) -> f64;
}
extern "C" {
    pub fn OpenMM_NonbondedForce_setGlobalParameterDefaultValue(
        target: *mut OpenMM_NonbondedForce,
        index: ::std::os::raw::c_int,
        defaultValue: f64,
    );
}
extern "C" {
    pub fn OpenMM_NonbondedForce_addParticleParameterOffset(
        target: *mut OpenMM_NonbondedForce,
        parameter: *const ::std::os::raw::c_char,
        particleIndex: ::std::os::raw::c_int,
        chargeScale: f64,
        sigmaScale: f64,
        epsilonScale: f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_NonbondedForce_getParticleParameterOffset(
        target: *const OpenMM_NonbondedForce,
        index: ::std::os::raw::c_int,
        parameter: *mut *mut ::std::os::raw::c_char,
        particleIndex: *mut ::std::os::raw::c_int,
        chargeScale: *mut f64,
        sigmaScale: *mut f64,
        epsilonScale: *mut f64,
    );
}
extern "C" {
    pub fn OpenMM_NonbondedForce_setParticleParameterOffset(
        target: *mut OpenMM_NonbondedForce,
        index: ::std::os::raw::c_int,
        parameter: *const ::std::os::raw::c_char,
        particleIndex: ::std::os::raw::c_int,
        chargeScale: f64,
        sigmaScale: f64,
        epsilonScale: f64,
    );
}
extern "C" {
    pub fn OpenMM_NonbondedForce_addExceptionParameterOffset(
        target: *mut OpenMM_NonbondedForce,
        parameter: *const ::std::os::raw::c_char,
        exceptionIndex: ::std::os::raw::c_int,
        chargeProdScale: f64,
        sigmaScale: f64,
        epsilonScale: f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_NonbondedForce_getExceptionParameterOffset(
        target: *const OpenMM_NonbondedForce,
        index: ::std::os::raw::c_int,
        parameter: *mut *mut ::std::os::raw::c_char,
        exceptionIndex: *mut ::std::os::raw::c_int,
        chargeProdScale: *mut f64,
        sigmaScale: *mut f64,
        epsilonScale: *mut f64,
    );
}
extern "C" {
    pub fn OpenMM_NonbondedForce_setExceptionParameterOffset(
        target: *mut OpenMM_NonbondedForce,
        index: ::std::os::raw::c_int,
        parameter: *const ::std::os::raw::c_char,
        exceptionIndex: ::std::os::raw::c_int,
        chargeProdScale: f64,
        sigmaScale: f64,
        epsilonScale: f64,
    );
}
extern "C" {
    pub fn OpenMM_NonbondedForce_getUseDispersionCorrection(
        target: *const OpenMM_NonbondedForce,
    ) -> OpenMM_Boolean;
}
extern "C" {
    pub fn OpenMM_NonbondedForce_setUseDispersionCorrection(
        target: *mut OpenMM_NonbondedForce,
        useCorrection: OpenMM_Boolean,
    );
}
extern "C" {
    pub fn OpenMM_NonbondedForce_getReciprocalSpaceForceGroup(
        target: *const OpenMM_NonbondedForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_NonbondedForce_setReciprocalSpaceForceGroup(
        target: *mut OpenMM_NonbondedForce,
        group: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn OpenMM_NonbondedForce_updateParametersInContext(
        target: *mut OpenMM_NonbondedForce,
        context: *mut OpenMM_Context,
    );
}
extern "C" {
    pub fn OpenMM_NonbondedForce_usesPeriodicBoundaryConditions(
        target: *const OpenMM_NonbondedForce,
    ) -> OpenMM_Boolean;
}
extern "C" {
    pub fn OpenMM_PeriodicTorsionForce_create() -> *mut OpenMM_PeriodicTorsionForce;
}
extern "C" {
    pub fn OpenMM_PeriodicTorsionForce_destroy(target: *mut OpenMM_PeriodicTorsionForce);
}
extern "C" {
    pub fn OpenMM_PeriodicTorsionForce_getNumTorsions(
        target: *const OpenMM_PeriodicTorsionForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_PeriodicTorsionForce_addTorsion(
        target: *mut OpenMM_PeriodicTorsionForce,
        particle1: ::std::os::raw::c_int,
        particle2: ::std::os::raw::c_int,
        particle3: ::std::os::raw::c_int,
        particle4: ::std::os::raw::c_int,
        periodicity: ::std::os::raw::c_int,
        phase: f64,
        k: f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_PeriodicTorsionForce_getTorsionParameters(
        target: *const OpenMM_PeriodicTorsionForce,
        index: ::std::os::raw::c_int,
        particle1: *mut ::std::os::raw::c_int,
        particle2: *mut ::std::os::raw::c_int,
        particle3: *mut ::std::os::raw::c_int,
        particle4: *mut ::std::os::raw::c_int,
        periodicity: *mut ::std::os::raw::c_int,
        phase: *mut f64,
        k: *mut f64,
    );
}
extern "C" {
    pub fn OpenMM_PeriodicTorsionForce_setTorsionParameters(
        target: *mut OpenMM_PeriodicTorsionForce,
        index: ::std::os::raw::c_int,
        particle1: ::std::os::raw::c_int,
        particle2: ::std::os::raw::c_int,
        particle3: ::std::os::raw::c_int,
        particle4: ::std::os::raw::c_int,
        periodicity: ::std::os::raw::c_int,
        phase: f64,
        k: f64,
    );
}
extern "C" {
    pub fn OpenMM_PeriodicTorsionForce_updateParametersInContext(
        target: *mut OpenMM_PeriodicTorsionForce,
        context: *mut OpenMM_Context,
    );
}
extern "C" {
    pub fn OpenMM_PeriodicTorsionForce_setUsesPeriodicBoundaryConditions(
        target: *mut OpenMM_PeriodicTorsionForce,
        periodic: OpenMM_Boolean,
    );
}
extern "C" {
    pub fn OpenMM_PeriodicTorsionForce_usesPeriodicBoundaryConditions(
        target: *const OpenMM_PeriodicTorsionForce,
    ) -> OpenMM_Boolean;
}
extern "C" {
    pub fn OpenMM_BrownianIntegrator_create(
        temperature: f64,
        frictionCoeff: f64,
        stepSize: f64,
    ) -> *mut OpenMM_BrownianIntegrator;
}
extern "C" {
    pub fn OpenMM_BrownianIntegrator_destroy(target: *mut OpenMM_BrownianIntegrator);
}
extern "C" {
    pub fn OpenMM_BrownianIntegrator_getTemperature(
        target: *const OpenMM_BrownianIntegrator,
    ) -> f64;
}
extern "C" {
    pub fn OpenMM_BrownianIntegrator_setTemperature(
        target: *mut OpenMM_BrownianIntegrator,
        temp: f64,
    );
}
extern "C" {
    pub fn OpenMM_BrownianIntegrator_getFriction(target: *const OpenMM_BrownianIntegrator) -> f64;
}
extern "C" {
    pub fn OpenMM_BrownianIntegrator_setFriction(
        target: *mut OpenMM_BrownianIntegrator,
        coeff: f64,
    );
}
extern "C" {
    pub fn OpenMM_BrownianIntegrator_getRandomNumberSeed(
        target: *const OpenMM_BrownianIntegrator,
    ) -> ::std::os::raw::c_int;
}
